--- a/mcp-tool-picker/package.json
+++ b/mcp-tool-picker/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d build"
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.4.0",
