--- a/mcp-tool-confirmation/package.json
+++ b/mcp-tool-confirmation/package.json
@@ -7,19 +7,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@vscode-elements/elements": "^1.14.0",
     "@vscode/codicons": "^0.0.36",
-    "@vscode/webview-ui-toolkit": "^1.4.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "gh-pages": "^6.3.0",
     "shiki": "^3.2.1",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
