--- a/mcp-tool-picker/package.json
+++ b/mcp-tool-picker/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@vscode/webview-ui-toolkit": "^1.4.0",
@@ -17,7 +16,6 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "gh-pages": "^6.3.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vue-tsc": "^2.2.4"
