--- a/mcp-tool-picker/package.json
+++ b/mcp-tool-picker/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vscode-elements/elements": "^1.14.0",
+    "@vscode/codicons": "^0.0.36",
     "@vscode/webview-ui-toolkit": "^1.4.0",
     "vue": "^3.5.13"
   },
